--- a/order-service.yml
+++ b/order-service.yml
@@ -1,3 +1,29 @@
 constants:
   payment:
     mode: cash
+info:
+  app:
+    name: Order service
+    description: Service for order management
+    version: 1.0.0
+    
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    defaultZone: http://ec2-65-0-170-153.ap-south-1.compute.amazonaws.com:7000/eureka
+    
+endpoints:
+  shutdown:
+    enabled: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: *
+  endpoint:
+    shutdown:
+      enabled: true
